fix(search): fix z-index of search filter in wide screen

--- a/client/src/components/preview/SearchPage.scss
+++ b/client/src/components/preview/SearchPage.scss
@@ -181,6 +181,7 @@ $color-blue: #4778d1;
         left: 0;
         border: none;
         box-shadow: none;
+        z-index: 10;
       }
     }
   }
